--- a/public/style/sass/components/_base.scss
+++ b/public/style/sass/components/_base.scss
@@ -116,7 +116,7 @@ nav{
 #hoverTitle{
   font-size: 20px;
   position: absolute;
-  overflow: scroll;
+  //overflow: scroll;
   max-width: 33%;
   max-height: 50px;
   min-height: 50px;
